--- a/src/App.css
+++ b/src/App.css
@@ -15,14 +15,15 @@ body {
 }
 
 .App {
-  border: 5px red solid;
-  width: 90vw;
-  height: 90vh;
-  padding-bottom: 20px;
+  border-radius: 5px;
+  border: 5px orangered solid;
+  width: 80vw;
+  height: 95vh;
+  padding-bottom: 32px;
 }
 
 #game {
-  background-color: floralwhite;
+  background-color: whitesmoke;
   width: 100%;
   height: 100%;
   display: flex;
@@ -36,12 +37,13 @@ body {
 .card{
   background-color: transparent;
   margin-left: 5px;
-  margin-top: 5px;
+  /* margin-top: 5px; */
   width: calc(100% / 6);
   height: 15%;
   perspective: 1000px;
 }
 .card-inner{
+  box-shadow: 5px 5px 10px -10px black;
   transform: rotateY(180deg);
   border: solid black 2px;
   height: 100%;
@@ -64,7 +66,7 @@ body {
 }
 
 .card-back {
-  background-color: #2980b9;
+  background-color: #944a37;
   color: white;
   transform: rotateY(180deg);
 }
@@ -73,14 +75,41 @@ body {
   /* user-select: none; */
   max-width: 92%;
   max-height: 95%;
+  border: 1px solid white ;
+  box-shadow: 0px 0px 10px -5px red;
 }
 #form{
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  font-size: 1.5rem;
+  text-shadow: 1px 1px 2px orange;
   font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
 }
 
 #input{
-  margin-left: 15px;
+  max-width: 150px;
+  margin-left: 20px;
+  border: 2px solid black;
+}
+button{
+  border-radius: 2px;
+  border: 2px solid black;
+  color: white;
+  background-color: rgb(134, 72, 0);
+  margin-right: 20px;
 }
 
+@media screen and (max-width: 700px){
+  #game{
+    background-color: black;
+  }
+  #form label {
+    display: none;
+  }
+  input{
+    max-width: 100px;
+  }
+}
 
 
