--- a/src/App.css
+++ b/src/App.css
@@ -101,8 +101,8 @@ button{
 }
 
 @media screen and (max-width: 700px){
-  #game{
-    background-color: black;
+  .App{
+    padding-bottom: 15px;
   }
   #form label {
     display: none;
