--- a/src/App.css
+++ b/src/App.css
@@ -4,7 +4,6 @@
   user-select: none;
   -webkit-user-drag: none;
 }
-/* /*   */
 body {
   margin: 0px;
   background:linear-gradient(to top, rgba(255, 166, 0, .6), rgba(247, 247, 247, 0)), url("../img/oriental-tiles.png");
@@ -20,19 +19,21 @@ body {
   border: 10px orangered ridge;
   width: 80vw;
   height: 95vh;
-  padding-bottom: 32px;
+  /* padding-bottom: 32px; */
 }
 
 #game {
+  /* z-index: -1; */
+  position: relative;
   background: url("../img/serious-white.png");
   width: 100%;
-  height: 100%;
+  height: 98%;
   display: flex;
   flex-wrap: wrap;
   justify-content: center;
   align-items: center;
   padding-bottom: 5px;
-  padding-top: 5px;
+
 }
 
 .card{
@@ -74,6 +75,10 @@ body {
   justify-content: center;
   align-items: center;
 }
+.correct{
+  width: 120%;
+  height: 150%;
+}
 .card-back:hover img{
   width: 80%;
   height: 80%;
@@ -93,10 +98,12 @@ body {
   box-shadow: 0px 0px 10px -5px red;
 }
 #form{
+  height: 5%;
   display: flex;
   align-items: center;
   justify-content: space-between;
   font-size: 1.5rem;
+  font-weight: bolder;
   text-shadow: 1px 1px 2px orange;
   font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
 }
@@ -108,15 +115,28 @@ body {
 }
 button{
   border-radius: 2px;
-  border: 2px solid black;
+  border: 2px solid grey;
   color: white;
-  background-color: rgb(134, 72, 0);
+  background-color: rgb(0, 0, 0);
   margin-right: 20px;
+  padding: 5px 10px 5px 10px;
+  transition: all .5s;
+}
+button:hover{
+  color: black;
+  background-color: orange;
+  border: 2px solid black;
 }
 
 @media screen and (max-width: 700px){
   .App{
-    padding-bottom: 15px;
+    width: 98vw;
+  }
+  #form{
+    justify-content: space-around;
+  }
+  button{
+    margin-right: 5px;
   }
   #form label {
     display: none;
