--- a/src/App.css
+++ b/src/App.css
@@ -6,7 +6,7 @@
 }
 body {
   margin: 0px;
-  background:linear-gradient(to top, rgba(255, 166, 0, .6), rgba(247, 247, 247, 0)), url("../img/oriental-tiles.png");
+  background:linear-gradient(to top, rgba(255, 166, 0, .6), rgba(247, 247, 247, 0)), url("./img/oriental-tiles.png");
   overflow: hidden;
   min-height: 100vh;
   display: flex;
@@ -25,7 +25,7 @@ body {
 #game {
   /* z-index: -1; */
   position: relative;
-  background: url("../img/serious-white.png");
+  background: url("./img/serious-white.png");
   width: 100%;
   height: 98%;
   display: flex;
