--- a/src/App.css
+++ b/src/App.css
@@ -12,6 +12,7 @@ body {
   display: flex;
   justify-content: center;
   align-items: center;
+  font-family:'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif ;
 }
 
 .App {
@@ -45,10 +46,10 @@ body {
 }
 .card-inner{
   box-shadow: 5px 5px 10px -10px black;
-  transform: rotateY(180deg);
+  transform: rotateY(0deg);
   border: solid black 2px;
   height: 100%;
-  transition: transform 0.6s;
+  transition: transform 0.3s;
   transform-style: preserve-3d;
 }
 .card-front, .card-back {
@@ -103,6 +104,66 @@ body {
   font-weight: bolder;
   text-shadow: 1px 1px 2px orange;
   font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+}
+
+.dropdown {
+  position: relative;
+  display: inline-block;
+  padding-left: 20px;
+}
+@keyframes dropdown{
+  0% {height: 0px}
+  100%{height:100%}
+}
+.dropdown-menu{
+  width: 100%;
+  overflow: hidden;
+  display: none;
+  margin: 0;
+  padding: 0;
+  text-align: center;
+  top: 29px;
+  position: absolute;
+  background-color: orange;
+  z-index: 5;
+  list-style-type: none;
+}
+.dropdown-menu li{
+  margin: 0;
+  width: 100%;
+  padding: 5px 10px 5px 10px;
+}
+.dropdown-menu a{
+  /* width: 100%; */
+  color: black;
+  text-decoration: none;
+}
+.dropdown-menu li:hover{
+  border: 1px solid black;
+}
+.dropdown-submenu{
+  display: hidden;
+}
+.navToggle{
+  overflow: visible;
+  display: block;
+  animation: dropdown .3s;
+}
+.menu-show{
+  display: block;
+  position: absolute;
+  background-color: rgb(209, 136, 0);
+}
+.submenu{
+  display:none;
+  text-align: center;
+  list-style-type: none;
+}
+.submenu-show{
+  display: block;
+  position: absolute;
+  right: 100px;
+  background-color: rgb(209, 136, 0);
 }
 
 #input{
