--- a/src/App.css
+++ b/src/App.css
@@ -37,13 +37,23 @@ body {
   position: relative;
   background: url("./img/serious-white.png");
   width: 100%;
-  height: 98%;
+  height: 100%;
   display: flex;
   flex-wrap: wrap;
   justify-content: center;
   align-items: center;
-  padding-bottom: 5px;
-
+  /* padding-bottom: 8px; */
+}
+#gameBox{
+  position: relative;
+  background: url("./img/serious-white.png");
+  width: 100%;
+  height: 83%;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  align-items: center;
+  padding-bottom: 8px;
 }
 
 .card{
@@ -57,6 +67,7 @@ body {
   box-shadow: 5px 5px 10px -10px black;
   transform: rotateY(180deg);
   border: solid black 2px;
+  border-radius: 5px;
   height: 100%;
   transition: transform 0.3s;
   transform-style: preserve-3d;
@@ -77,6 +88,7 @@ body {
 }
 
 .card-back {
+  border: 2px solid black;
   background: url("./img/dark-paths.webp") no-repeat fixed center;
   background-size: cover;
   color: white;
@@ -109,14 +121,37 @@ body {
   display: flex;
   align-items: center;
   justify-content: center;
-  font-size: 1.5rem;
+  /* font-size: 1.5rem; */
   font-weight: bolder;
   text-shadow: 1px 1px 2px orange;
   font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
 }
+.playerStats{
+  width: 60%;
+  margin-left: auto;
+  margin-right: 0px;
+  margin-top: 5px;
+  padding: 0;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-around;
+  align-items: center;
+  max-height: 20px;
+  z-index: 3;
+}
+.playerStats p {
+  /* width: calc(100% / 4); */
+  margin-right: 15px;
+  font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+  font-weight: 600;
+}
+.playerStats p:nth-child(even){
+  /* margin-right: 25px; */
 
+}
 
 .catBtn{
+  margin-left: 20px;
   width: 100%;
 }
 .catCont{
@@ -133,13 +168,14 @@ body {
 }
 
 .dropdown {
+  border: 1px solid black;
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
   position: absolute;
-  top: 30px;
-  right: 0px;
+  top: 36px;
+  left: 20px;
   width: 100%;
   background-color: orange;
   border-radius: 2px;
@@ -150,11 +186,18 @@ body {
   width: 100%;
 }
 .menu-icon{
+  height: 15px;
+  width: 15px;
+}
+.arrowleft{
+  position: absolute;
+  left: 10px;
+  top: 8px;
+}
+.arrowright{
   position: absolute;
   margin-left: 20%;
   top: 8px;
-  height: 15px;
-  width: 15px;
 }
 .menu-item{
   display: flex;
@@ -198,11 +241,11 @@ body {
   transform: translateX(110%);
   transition: all .5s ease;
 }
-#input{
+/* #input{
   max-width: 150px;
   margin-left: 20px;
   border: 2px solid black;
-}
+} */
 button{
   font-family: inherit;
   border-radius: 2px;
@@ -210,8 +253,11 @@ button{
   color: black;
   background-color: rgb(194, 194, 194);
   margin-right: 20px;
+  margin-top: 5px;
+  margin-left: 5px;
   padding: 5px 10px 5px 10px;
   transition: all .5s;
+  z-index: 5;
 }
 button:hover{
   color: black;
@@ -221,12 +267,9 @@ button:hover{
 
 
 
-@media screen and (max-width: 700px){
+@media screen and (max-width: 1000px){
   .App{
     width: 98vw;
-  }
-  #form{
-    justify-content: space-around;
   }
   button{
     margin-right: 5px;
@@ -236,6 +279,18 @@ button:hover{
   }
   input{
     max-width: 100px;
+  }
+  .playerStats{
+    /* margin-left: 20px; */
+    width: 100%;
+    height: 10%;
+  }
+  .playerStats p{
+    /* font-size: .7em; */
+    margin-right:0px
+  }
+  .playerStats p:nth-child(even){
+    margin-right:5px
   }
 }
 
