--- a/src/App.css
+++ b/src/App.css
@@ -116,16 +116,7 @@ body {
   border: 1px solid white ;
   box-shadow: 0px 0px 10px -5px red;
 }
-#form{
-  height: 5%;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  /* font-size: 1.5rem; */
-  font-weight: bolder;
-  text-shadow: 1px 1px 2px orange;
-  font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
-}
+
 .playerStats{
   width: 60%;
   margin-left: auto;
@@ -141,6 +132,7 @@ body {
 }
 .playerStats p {
   /* width: calc(100% / 4); */
+  font-size: 1.2em;
   margin-right: 15px;
   font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
   font-weight: 600;
@@ -152,7 +144,8 @@ body {
 
 .catBtn{
   margin-left: 20px;
-  width: 100%;
+  width: 150px;
+  text-transform: capitalize;
 }
 .dropdownCont{
   text-align: center;
@@ -171,12 +164,17 @@ body {
   top: 36px;
   left: 20px;
   width: 100%;
+  width: calc(100% - 25px);
 }
 
 .difficulty{
-
+  width: 90%;
+  left: 4px;
+  top: 33px;
 }
-
+.diffBtn{
+  width: 100px;
+}
 .dropdown {
   border: 1px solid black;
   display: flex;
@@ -205,6 +203,10 @@ body {
   position: absolute;
   margin-left: 20%;
   top: 8px;
+}
+.selectedCat{
+  border: 1px solid black;
+  background-color: rgb(255, 189, 67);
 }
 .menu-item{
   display: flex;
@@ -248,11 +250,11 @@ body {
   transform: translateX(110%);
   transition: all .5s ease;
 }
-/* #input{
-  max-width: 150px;
-  margin-left: 20px;
-  border: 2px solid black;
-} */
+.newBtn{
+  position: absolute;
+  left: 0px;
+  top: 60px;
+}
 button{
   font-family: inherit;
   border-radius: 2px;
@@ -273,10 +275,10 @@ button:hover{
 }
 
 
-
-@media screen and (max-width: 1000px){
+@media screen and (max-width: 850px){
   .App{
     width: 98vw;
+    max-height: 80vh;
   }
   button{
     margin-right: 5px;
@@ -284,20 +286,28 @@ button:hover{
   #form label {
     display: none;
   }
-  input{
-    max-width: 100px;
-  }
   .playerStats{
     /* margin-left: 20px; */
     width: 100%;
-    height: 10%;
+    /* height: 10%; */
   }
   .playerStats p{
-    /* font-size: .7em; */
+    font-size: .8rem;
     margin-right:0px
   }
   .playerStats p:nth-child(even){
     margin-right:5px
+  }
+  .diffBtn{
+    width: 70px;
+  }
+  .catBtn{
+    width: 100px;
+  }
+  .newBtn{
+    width: 100px;
+    left: calc(100% - 120px);
+    top: 10px;
   }
 }
 
