--- a/src/App.css
+++ b/src/App.css
@@ -4,9 +4,18 @@
   user-select: none;
   -webkit-user-drag: none;
 }
+
+@keyframes bg-scroll {
+  from {background-position-y: 0%;}
+  to {background-position-y: 100%;}
+}
+
 body {
   margin: 0px;
   background:linear-gradient(to top, rgba(255, 166, 0, .6), rgba(247, 247, 247, 0)), url("./img/oriental-tiles.png");
+  
+  animation: bg-scroll 60s infinite linear;
+  
   overflow: hidden;
   min-height: 100vh;
   display: flex;
