--- a/src/App.css
+++ b/src/App.css
@@ -6,65 +6,90 @@
 }
 
 @keyframes bg-scroll {
-  from {background-position-y: 0%;}
-  to {background-position-y: 100%;}
+  from {background-position-y: 0vh;}
+  to {background-position-y: 100vh;}
 }
-
+.animate{
+  animation: bg-scroll 40s infinite linear;
+}
+.animating{
+  background-color: rgb(255, 189, 67);
+}
 body {
   margin: 0px;
-  background:linear-gradient(to top, rgba(255, 166, 0, .6), rgba(247, 247, 247, 0)), url("./img/oriental-tiles.png");
-  
-  animation: bg-scroll 60s infinite linear;
-  
+  background: url("./img/oriental-tiles.png");
   overflow: hidden;
   min-height: 100vh;
+  font-family:'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif ;
+}
+#root{
   display: flex;
   justify-content: center;
   align-items: center;
-  font-family:'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif ;
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  background:linear-gradient(to top, rgba(255, 166, 0, .6), rgba(247, 247, 247, 0))
 }
 ::-webkit-scrollbar {
   width: 5px;
 }
 ::-webkit-scrollbar-track {
-  background: #c00000;
+  background: orangered;
 }
 ::-webkit-scrollbar-thumb {
-  background: #5f0404;
+  background:  #682020;
+  ;
 }
 ::-webkit-scrollbar-thumb:hover {
   background: #682020;
 }
-.App {
-  width: 80vw;
-  height: 95vh;
+.menu{
+  width: 100%;
 }
-
 #game {
+  position: relative;
+  min-width: 900px;
+  /* max-width: 1000px; */
+  height: 95vh;
   border: 10px orangered ridge;
   border-radius: 10px;
-  position: relative;
   background: url("./img/serious-white.png");
-  width: 100%;
-  height: 100%;
   display: flex;
   flex-wrap: wrap;
   justify-content: center;
   align-items: center;
-  /* padding-bottom: 8px; */
 }
+
 #gameBox{
   position: relative;
   /* background: url("./img/serious-white.png"); */
   width: 100%;
-  height: 83%;
+  height: 95%;
   display: flex;
   flex-wrap: wrap;
   justify-content: center;
   align-items: center;
   padding-bottom: 8px;
 }
-
+.gui{
+  position: absolute;
+  padding: 5px;
+  background: url("./img/serious-white.png");
+  right: 105%;
+  border: 10px orangered ridge;
+  border-radius: 10px;
+  margin: 0px 5px 0px 5px;
+  height: 95vh;
+  display: flex;
+  align-items: center;
+  /* justify-content: space-between; */
+  flex-wrap: wrap;
+  flex-direction: column;
+}
+.gui > *{
+  margin-bottom: 20px;
+}
 .card{
   background-color: transparent;
   margin-left: 5px;
@@ -95,7 +120,6 @@ body {
   align-items: center;
   background-color: #bbb;
 }
-
 .card-back {
   border: 2px solid black;
   background: url("./img/dark-paths.webp") no-repeat fixed center;
@@ -127,38 +151,35 @@ body {
 }
 
 .playerStats{
-  width: 60%;
+  width: 100%;
   margin-left: auto;
   margin-right: 0px;
   margin-top: 5px;
   padding: 0;
   display: flex;
-  flex-direction: row;
+  flex-direction: column;
   justify-content: space-around;
   align-items: center;
-  max-height: 20px;
-  z-index: 3;
+  /* max-height: 20px; */
+  /* z-index: 5; */
 }
 .playerStats p {
-  /* width: calc(100% / 4); */
+  margin-right: 10px;
   font-size: 1.2em;
-  margin-right: 15px;
   font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
   font-weight: 600;
 }
-.playerStats p:nth-child(even){
-  /* margin-right: 25px; */
-
+.resetBestBtn{
+  width: 150px;
 }
 
 .catBtn{
-  margin-left: 20px;
   width: 150px;
   text-transform: capitalize;
 }
 .dropdownCont{
   text-align: center;
-  z-index: 5;
+  /* z-index: 10; */
   position: relative;
 }
 .downArrow{
@@ -170,21 +191,17 @@ body {
 }
 
 .imageCat{
-  top: 36px;
-  left: 20px;
-  width: 100%;
-  width: calc(100% - 25px);
+  top: 31px;
 }
 
 .difficulty{
-  width: 90%;
-  left: 4px;
-  top: 33px;
+  top: 28px;
 }
 .diffBtn{
   width: 100px;
 }
 .dropdown {
+  width: 100%;
   max-height: 80vh;
   box-sizing: border-box;
   border: 1px solid black;
@@ -197,10 +214,7 @@ body {
   border-radius: 2px;
   overflow-x: hidden;
   transition: height .5s ease;
-}
-.menu{
-  /* height: 100%; */
-  width: 100%;
+  z-index: 1;
 }
 .menu-icon{
   height: 15px;
@@ -220,6 +234,9 @@ body {
 .selectedCat{
   border: 1px solid black;
   background-color: rgb(255, 189, 67);
+}
+.menu{
+  z-index: 1;
 }
 .menu-item{
   box-sizing: border-box;
@@ -265,23 +282,20 @@ body {
   transform: translateX(110%);
   transition: all .5s ease;
 }
+
 .newBtn{
-  position: absolute;
-  left: 0px;
-  top: 60px;
+  width: 100px;
 }
 button{
+  /* width: calc(100%/3 - 2rem); */
   font-family: inherit;
   border-radius: 2px;
   border: 2px solid grey;
   color: black;
   background-color: rgb(194, 194, 194);
-  margin-right: 20px;
-  margin-top: 5px;
-  margin-left: 5px;
-  padding: 5px 10px 5px 10px;
+  padding: 5px;
   transition: all .5s;
-  z-index: 5;
+  /* z-index: 1; */
 }
 button:hover{
   color: black;
@@ -289,41 +303,68 @@ button:hover{
   border: 2px solid black;
 }
 
-
-@media screen and (max-width: 850px){
-  .App{
-    width: 98vw;
-    max-height: 80vh;
+@media (max-width: 850px){
+  #gameBox{
+    height: 83%;
   }
-  button{
-    margin-right: 5px;
-  }
-  #form label {
-    display: none;
+  #game{
+    margin-right: 0px !important;
+    min-width: 0px !important;
+    max-width: 1000px;
   }
   .playerStats{
-    margin: 5px;
+    height: 5%;
+    flex-direction: row;
     width: 100%;
-    /* height: 10%; */
   }
   .playerStats p{
     font-size: .8rem;
-    /* margin-right:0px */
-  }
-  .playerStats p:nth-child(even){
-    /* margin-right:5px */
   }
   .diffBtn{
     width: 70px;
   }
   .catBtn{
-    width: 100px;
+    width: 140px;
   }
-  .newBtn{
-    width: 100px;
-    left: calc(100% - 120px);
-    top: 10px;
+  .animateBtn{
+    padding: 3px;
+    height: 25px;
+  }
+  .arrowright{
+    left: 70px;
+  }
+  .gui{
+    right: 0%;
+    position: relative;
+    border: none;
+    margin: 0px 5px 0px 5px;
+    height: 15%;
+    width: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    flex-wrap: wrap;
+    flex-direction: row;
   }
 }
+@media (max-width: 1000px) {
+  #root{
+    justify-content: end;
+  }
+  #game{
+    /* margin-right: 100px; */
+    min-width: 500px;
+  }
+}
+@media (max-width: 1200px) {
+  #root{
+    justify-content: end;
+  }
+  #game{
+    margin-right: 75px;
+    min-width: 700px;
+  }
+}
+
 
 
